# ppx_deriving_jsonschema

./: .ocamlformat  CHANGES.md  Makefile  README.md  dune-project  index.html  ppx_deriving_jsonschema.opam
.github/workflows/: build-test.yml  deploy-doc.yml  lint.yml  opam-dependency-submission.yml
.serena/: project.yml
docs/plans/: 2026-03-25-description-attribute-design.md
ppx_deriving_jsonschema/: index.html
ppx_deriving_jsonschema/Ppx_deriving_jsonschema/: index.html
ppx_deriving_jsonschema/Ppx_deriving_jsonschema/Schema/: index.html
ppx_deriving_jsonschema/Ppx_deriving_jsonschema_runtime/: index.html
runtime/: Ppx_deriving_jsonschema_runtime_classify.ml  classify.ml  dune  ppx_deriving_jsonschema_classify.ml  ppx_deriving_jsonschema_runtime.ml  ppx_deriving_jsonschema_runtime.mli  ppx_deriving_jsonschema_runtime_primitives.ml  ppx_deriving_jsonschema_runtime_primitives.mli
runtime/melange/: classify.ml  dune  ppx_deriving_jsonschema_runtime.mli
src/: attrs.ml  attrs.mli  dune  ppx_deriving_jsonschema.ml  schema.ml  schema.mli
test/: README.md  default_cases_native.ml  default_schemas.expected.json  dune  generate_default_schemas.ml  generate_schemas.ml  test.expected.ml  test.melange.expected.ml  test.ml  test_schemas.expected.json  test_sig.t
test/melange/: dune  melange_test.ml  tests.t
test/shared/: cases.ml  default_cases.ml  generate_schemas_cases.ml  schema_snapshot.ml
