(executable
 (name pp)
 (modules pp)
 (libraries ppx_deriving_jsonschema ppxlib ppx_deriving_jsonschema.runtime))

(rule
 (targets test.actual.ml)
 (deps
  (:pp pp.exe)
  (:input test.ml))
 (action
  (run ./%{pp} -deriving-keep-w32 both --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(copy_files shared/schema_snapshot.ml)

(copy_files shared/generate_schemas_cases.ml)

(library
 (name schema_snapshot_support)
 (modules schema_snapshot)
 (wrapped false))

(library
 (name generate_schemas_support)
 (modules generate_schemas_cases)
 (wrapped false)
 (libraries
  melange-json
  ppx_deriving_jsonschema.runtime
  schema_snapshot_support)
 (preprocess
  (pps ppx_deriving_jsonschema melange-json-native.ppx)))

(library
 (name test)
 (modules test default_cases_native)
 (libraries
  yojson
  melange-json
  ppx_deriving_jsonschema.runtime
  generate_schemas_support)
 (inline_tests)
 (preprocess
  (pps ppx_deriving_jsonschema ppx_expect melange-json-native.ppx)))

(cram
 (deps %{exe:pp.exe}))

(executable
 (name generate_schemas)
 (modules generate_schemas)
 (libraries yojson generate_schemas_support))

(executable
 (name generate_default_schemas)
 (modules generate_default_schemas)
 (libraries generate_schemas_support))

(rule
 (targets test_schemas.actual.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./generate_schemas.exe))))

(rule
 (targets default_schemas.actual.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./generate_default_schemas.exe))))

(rule
 (alias runtest)
 (action
  (diff test_schemas.expected.json test_schemas.actual.json)))

(rule
 (alias runtest)
 (action
  (diff default_schemas.expected.json default_schemas.actual.json)))
