(executable
 (name pp)
 (modules pp)
 (libraries
  ppx_deriving_jsonschema
  ppxlib
  ppx_deriving_jsonschema.runtime
  melange-json-native.ppx))

(rule
 (targets test.actual.ml)
 (deps
  (:pp pp.exe)
  (:input test.ml))
 (action
  (run ./%{pp} -deriving-keep-w32 both --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(copy_files shared/schema_snapshot.ml)

(copy_files shared/generate_schemas_cases.ml)

(library
 (name schema_snapshot_support)
 (modules schema_snapshot)
 (wrapped false))

(library
 (name test)
 (modules test)
 (libraries melange-json ppx_deriving_jsonschema.runtime)
 (preprocess
  (pps ppx_deriving_jsonschema melange-json-native.ppx)))

(library
 (name generate_schemas_support)
 (modules generate_schemas_cases)
 (wrapped false)
 (libraries ppx_deriving_jsonschema.runtime schema_snapshot_support test))

(cram
 (deps %{exe:pp.exe}))

(executable
 (name generate_schemas)
 (modules generate_schemas)
 (libraries yojson generate_schemas_support))

(rule
 (targets test_schemas.actual.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./generate_schemas.exe))))

(rule
 (alias runtest)
 (action
  (diff test_schemas.expected.json test_schemas.actual.json)))
