(copy_files ../shared/default_cases.ml)

(melange.emit
 (target output)
 (libraries melange-json ppx_deriving_jsonschema.runtime_melange)
 (preprocess
  (pps ppx_deriving_jsonschema melange-json.ppx melange.ppx))
 (module_systems
  (commonjs js)))

(cram
 (deps
  (alias melange)
  ../default_schemas.expected.json
  ./output/test/melange/melange_test.js
  ./output/test/melange/generate_default_schemas.js))
